--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,13 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenLocal()
+        mavenCentral()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
@@ -21,7 +27,6 @@ allprojects {
         google()
         jcenter()
 
-        
     }
 }
 
